# Toolify

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
app/: index.html  package-lock.json  package.json
app/src/: App.vue  style.css  version.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src-tauri/src/tools/: certdecoder.rs  json.rs  mod.rs  yaml.rs
app/src/components/: BeautifyMinifyTool.vue  ContextMenu.vue  TwoPaneTextTool.vue  VirtualList.vue
app/src/tools/: registry.ts
app/src/tools/backslash/: BackslashTool.vue  logic.test.ts  logic.ts
app/src/tools/base64/: Base64Tool.vue
app/src/tools/base64image/: Base64ImageTool.vue  logic.test.ts  logic.ts
app/src/tools/caseconverter/: CaseConverterTool.vue  logic.test.ts  logic.ts
app/src/tools/certdecoder/: CertDecoderTool.vue
app/src/tools/colorconverter/: ColorConverterTool.vue  logic.test.ts  logic.ts
app/src/tools/cronparser/: CronParserTool.vue  logic.test.ts  logic.ts
app/src/tools/cssbeautify/: CssBeautifyTool.vue  logic.test.ts  logic.ts
app/src/tools/curltocode/: CurlToCodeTool.vue  logic.test.ts  logic.ts
app/src/tools/diffchecker/: DiffCheckerTool.vue  logic.test.ts  logic.ts
app/src/tools/erbbeautify/: ErbBeautifyTool.vue  logic.test.ts  logic.ts
app/src/tools/hashgen/: HashGenTool.vue  logic.test.ts  logic.ts
app/src/tools/hexascii/: HexAsciiTool.vue  logic.test.ts  logic.ts
app/src/tools/htmlbeautify/: HtmlBeautifyTool.vue  logic.test.ts  logic.ts
app/src/tools/htmlentity/: HtmlEntityTool.vue  logic.test.ts  logic.ts
(+75 files in other folders)
