[package]
name = "app"
version = "0.1.0"
description = "Toolify — an offline-first desktop toolbox for developers"
authors = ["Toolify contributors"]
license = "MIT"
repository = "https://github.com/zack-the-worker/Toolify"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
x509-parser = "0.16"
pem = "3"
chrono = { version = "0.4", default-features = false, features = ["std"] }
